# stargazers

./: .gitignore  Cargo.toml  README.md  Rocket.toml
db/migrations/: base.sql
src/: analyse.rs  db.rs  download.rs  main.rs
src/github/: mod.rs  types.rs
web/: README.md  analyse.js  index.html  package-lock.json  package.json
web/src/: App.vue
web/src/components/: Dashboard.vue  TopFollowed.vue  TopStarred.vue  TopSubscribed.vue
web/src/router/: index.ts
